20251002 코드정리